Clean up the query string class